cabal-version:       >=1.10
name:                pg-sse
version:             0.1.0.0
author:              Florian Klein
maintainer:          florian.klein@free.fr
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable pg-sse
  main-is:             Main.hs
  -- hs-source-dirs:
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
    , DeriveGeneric
    , DerivingStrategies
    , DeriveAnyClass
    , BlockArguments
    , ImplicitParams

  build-depends:
      base
    , aeson
    , async
    , bytestring
    , hasql
    , hasql-notifications
    , resource-pool
    , text
    , wai
    , wai-extra
    , warp
